# test-story

./: pyproject.toml
.claude-plugin/: plugin.json
docs/api/: collections.md  harnesses.md  overview.md  providers.md  runs.md  server.md  steps.md  stories.md
docs/cli/: collection.md  harness.md  overview.md  provider.md  run.md  server.md  story.md
skills/test-story/: SKILL.md
skills/test-story/references/: story-format.md
stories/: story1.md
story/: __main__.py  ids.py  runner.py
story/cli/: __init__.py  collection_cmd.py  harness_cmd.py  provider_cmd.py  run_cmd.py  server_cmd.py  story_cmd.py
story/db/: __init__.py
story/db/queries/: collections.py  harnesses.py  providers.py  runs.py  steps.py  stories.py
story/harness/: __init__.py  claude_agent_sdk.py  claude_code.py  opencode.py
story/models/: collection.py  common.py  run.py
story/server/: app.py  deps.py
story/server/routes/: collections.py  harnesses.py  providers.py  runs.py  server.py  steps.py  stories.py
test_story/: errors.py  runner.py
test_story/cli/: __init__.py  client.py  collection_cmd.py  formatters.py  harness_cmd.py  provider_cmd.py  run_cmd.py  server_cmd.py  story_cmd.py
test_story/db/: __init__.py  schema.py
test_story/db/queries/: collections.py  harnesses.py  providers.py  runs.py  steps.py  stories.py
test_story/harness/: __init__.py  base.py  claude_agent_sdk.py  claude_code.py  opencode.py
test_story/models/: harness.py  provider.py  step.py  story.py
test_story/server/: app.py  deps.py  sse.py
test_story/server/routes/: collections.py  harnesses.py  (+5 more)
