[project]
name = "test-story"
version = "0.1.0"
description = "A story-driven test framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "duckdb>=1.2",
    "pydantic>=2.0",
    "click>=8.1",
    "httpx>=0.28",
    "httpx-sse>=0.4",
    "rich>=13.0",
    "python-multipart>=0.0.18",
    "pytz>=2024.1",
]

[project.scripts]
test-story = "test_story.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test_story"]
